# ScheduleFeu

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/grades_checker/: __init__.py  cli.py
src/grades_checker/config/: settings.py
src/grades_checker/logic/: __init__.py  cgpa.py  honors.py  performance.py  schedule.py  terms.py
src/grades_checker/models/: __init__.py  entities.py
src/grades_checker/scraping/: __init__.py  course_offerings_scraper.py  curriculum_scraper.py  grades_scraper.py  session.py  user_profile_scraper.py
src/grades_checker/services/: analysis_flow.py  analyzer.py  availability_cache_service.py  cache_service.py  honors_flow.py  outlier_flow.py  outlier_output.py  performance_flow.py  professor_excel.py  schedule_flow.py  schedule_image.py  summary_flow.py
