[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grades-checker"
version = "0.1.0"
description = "FEU Tech SOLAR grade checker and honors estimator"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "playwright==1.53.0",
  "rich==13.9.4",
  "pillow==11.1.0",
  "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
grades-checker = "grades_checker.cli:main"
